<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:paddingTop="120dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textSize="28sp"
        android:gravity="center"
        android:lineSpacingExtra="8sp"
        android:textColor="@color/textDarkColor"/>

    <TextView
        android:paddingTop="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/textDarkColor"
        android:textSize="36sp"
        android:gravity="center"/>

    <Button
        android:id="@+id/direct_start_btn"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/start_directly"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/ligthShades"
        android:background="@color/mainBrandColor"
        android:gravity="center"/>

    <Button
        android:layout_marginTop="16dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/ligthShades"
        android:background="@color/googleBlue"
        android:gravity="center"/>
</LinearLayout>