<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saving_goal"
            android:textColor="@color/textDarkColor"
            android:textSize="32dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/saving_goal_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/before"
                android:textColor="@color/textDarkColor"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/saving_goal_date_tv"
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dd/mm/yy"
                android:textColor="@color/textDarkColor"
                android:textSize="18dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/view_saving_goal_detail_btn"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/darkAccent"
            android:textSize="24dp"
            android:text="@string/view_detail"
            android:paddingHorizontal="8dp"
            android:textColor="@color/ligthShades"
            android:textAllCaps="false"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightAccent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textColor="@color/textDarkColor"
            android:textSize="32dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spent"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/spent_already_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:id="@+id/spent_estimate_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:layout_marginLeft="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_week"
                android:textColor="@color/textDarkColor"
                android:textSize="18dp"/>

        </LinearLayout>
        <Button
            android:id="@+id/add_expense_btn"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/darkAccent"
            android:textSize="24dp"
            android:text="@string/add_expense"
            android:paddingHorizontal="8dp"
            android:textColor="@color/ligthShades"
            android:textAllCaps="false"/>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/lightAccent"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textColor="@color/textDarkColor"
            android:textSize="32dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/budget_remain_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
            <TextView
                android:id="@+id/budget_income_tv"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12345"
                android:textColor="@color/textDarkColor"
                android:textSize="24dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/add_income_tv"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/darkAccent"
            android:textSize="24dp"
            android:text="@string/add_income"
            android:paddingHorizontal="8dp"
            android:textColor="@color/ligthShades"
            android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>